Made a much better entrant wizard, it aint done tho

--- a/SimTECH/SimTECH/Pages/Credits.razor
+++ b/SimTECH/SimTECH/Pages/Credits.razor
@@ -1,5 +1,9 @@
 ﻿<h3>Credits</h3>
-<p>sokje for human being generator and f1 graphics generator</p>
+<p>sokje for human being generator-data and f1 graphics generator</p>
+<p>tabler icons for icons</p>
+<p>MudBlazor for the component framework</p>
+<p>FrankyDoodle for simming in general</p>
+<p>Skeltal for name inspiration</p>
 
 <MudGrid>
     <MudItem xs="12"></MudItem>
