--- a/SimTECH/SimTECH/Pages/Season/Overview.razor
+++ b/SimTECH/SimTECH/Pages/Season/Overview.razor
@@ -285,11 +285,11 @@
 
         if (confirm == true)
         {
-            await _seasonService.FinishSeason(Season.Id);
+            await _seasonService.FinishSeason(SeasonId);
             _nav.NavigateTo("/seasons");
         }
     }
 
-    void AddAllEntrants() => _nav.NavigateTo($"/addentrants/{SeasonId}");
+    void AddAllEntrants() => _nav.NavigateTo($"/addentrantswizard/{SeasonId}");
     void GoToComponentUsage() => _nav.NavigateTo($"/components/{SeasonId}");
 }
