fonts my boy, FONTS

--- a/SimTECH/SimTECH/Components/GridChange.razor
+++ b/SimTECH/SimTECH/Components/GridChange.razor
@@ -1,6 +1,6 @@
 ﻿<MudStack Row="true">
     <MudIcon Size="Size.Small" Icon="@_icon" Color="@_iconColour" Style="@_style" />
-    <MudText>@_gridDisplay</MudText>
+    <MudText Typo="Typo.caption" Color="@_iconColour">@_gridDisplay</MudText>
 </MudStack>
 
 @code {
