--- a/SimTECH/SimTECH/Components/MudTdResult.razor
+++ b/SimTECH/SimTECH/Components/MudTdResult.razor
@@ -53,7 +53,7 @@
             }
             else if (Result.Status == RaceStatus.Dsq)
             {
-                cellStyle = "background-color:black;color:white";
+                cellStyle = "background-color:black;color:white !important";
             }
             else if (Result.Status == RaceStatus.Dnf)
             {
@@ -61,7 +61,7 @@
             }
             else if (Result.Status == RaceStatus.Fatal)
             {
-                cellStyle = "background-color:black;color:white";
+                cellStyle = "background-color:black;color:white !important";
             }
             else
             {
