--- a/SimTECH/SimTECH/Pages/Season/Standings.razor
+++ b/SimTECH/SimTECH/Pages/Season/Standings.razor
@@ -249,11 +249,15 @@ else
         }
         else if (cell.Status == RaceStatus.Dsq)
         {
-            cellStyle = "background-color: black;";
+            cellStyle = "background-color: black;color:white";
         }
         else if (cell.Status == RaceStatus.Dnf)
         {
             cellStyle = "background-color: red;";
+        }
+        else if (cell.Status == RaceStatus.Fatal)
+        {
+            cellStyle = "background-color: black;color:white";
         }
         else
         {
