--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -13,9 +13,47 @@
     src: url("../fonts/Formula1-Wide.otf") format("opentype");
 }
 
+@font-face {
+    font-family: "SourceRegular";
+    src: url("../fonts/SourceCodePro-Regular.ttf") format('truetype');
+}
+
+@font-face {
+    font-family: "SourceBlack";
+    src: url("../fonts/SourceCodePro-Black.ttf") format('truetype');
+}
+
+@font-face {
+    font-family: "NovaRegular";
+    src: url('../fonts/Proxima Nova Regular.otf') format('opentype');
+}
+
+@font-face {
+    font-family: "NovaBold";
+    src: url('../fonts/Proxima Nova Bold.otf') format('opentype');
+}
+
+@font-face {
+    font-family: "NovaBlack";
+    src: url('../fonts/Proxima Nova Black.otf') format('opentype');
+}
+
+@font-face {
+    font-family: "NovaExtraBlack";
+    src: url("../fonts/ProximaNovaExCn-Extrabld.otf") format('opentype');
+}
+
 html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: NovaRegular;
     font-size: 18px;
+}
+
+h1, h2, h3, h4, h5, .number-col, .number-col-lg {
+    font-family: F1Regular;
+}
+
+th {
+    font-family: F1Bold;
 }
 
 .flag-xs {
