--- a/SimTECH/SimTECH/Pages/Setup/Tracks.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Tracks.razor
@@ -33,7 +33,7 @@
             <TemplateColumn T="Track" Title="Qualifying">
                 <CellTemplate>@(context.Item.QualifyingMod)x</CellTemplate>
             </TemplateColumn>
-            <TemplateColumn T="Track" Class="d-flex justify-end">
+            <TemplateColumn T="Track">
                 <CellTemplate>
                     <MudButtonGroup>
                         <MudIconButton Size="@Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateTrack(context.Item))" />
