--- a/SimTECH/SimTECH/Shared/MainLayout.razor
+++ b/SimTECH/SimTECH/Shared/MainLayout.razor
@@ -62,16 +62,12 @@
 </MudLayout>
 
 @code {
-    MudTheme theme = Constants.DefaultTheme;
+    MudTheme theme = Constants.SynthTheme;
     bool drawerOpen = true;
     bool isDarkTheme = true;
 
     protected override void OnInitialized()
     {
-        // So when a new page is visited, we need to clear navigation to prevent breadcrumbs from bleed-over, etc.
-
-        // doesnt seem to work btw lol
-        //Bread.Reset();
     }
 
     void ToggleSidebar()
