--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -10,7 +10,7 @@
 <MudContainer Class="mt-16 px-8" MaxWidth="MaxWidth.False">
     <MudGrid>
         <MudItem xs="12" sm="6" md="4">
-            <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
+            <MudPaper Elevation="2" Class="pa-4" Style="height: 300px;">
                 <MudText Typo="Typo.overline">_config:</MudText>
                 <MudText Typo="Typo.body2">Fatal odds: @_config.Value.FatalityChance</MudText>
                 <MudText Typo="Typo.body2">Dsq odds: @_config.Value.DisqualifyChance</MudText>
@@ -23,13 +23,13 @@
         </MudItem>
 
         <MudItem xs="12" sm="6" md="4">
-            <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
+            <MudPaper Elevation="2" Class="pa-4" Style="height: 300px;">
                 <MudText Typo="Typo.h2">SimTECH</MudText>
             </MudPaper>
         </MudItem>
 
         <MudItem xs="12" sm="12" md="4">
-            <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
+            <MudPaper Elevation="2" Class="pa-4" Style="height: 300px;">
                 <MudText Typo="Typo.overline">_config:</MudText>
                 <MudText Typo="Typo.body2">Sunny engine multiplier: @_config.Value.SunnyEngineMultiplier</MudText>
                 <MudText Typo="Typo.body2">Overcast engine multiplier: @_config.Value.OvercastEngineMultiplier</MudText>
@@ -44,7 +44,7 @@
         <MudItem xs="12" sm="6">
             <MudGrid>
                 <MudItem xs="12">
-                    <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
+                    <MudPaper Elevation="2" Class="pa-4" Style="height: 300px;">
                         <MudText Typo="Typo.h6">Examples</MudText>
                         
                         <div>
@@ -56,7 +56,7 @@
                 </MudItem>
 
                 <MudItem xs="12">
-                    <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
+                    <MudPaper Elevation="2" Class="pa-4" Style="height: 300px;">
                         <MudStack Row="true">
                             <MudText Typo="Typo.h6">Custom Icon Cycler</MudText>
                             <MudSpacer />
@@ -72,7 +72,7 @@
         </MudItem>
 
         <MudItem xs="12" sm="6">
-            <MudPaper Elevation="2" Class="pa-4" Style="height: 100%">
+            <MudPaper Elevation="2" Class="pa-4 mud-height-full">
                 @if (recentRaces != null)
                 {
                     <MudTable id="recent-race-table" Items="@recentRaces" Dense="true">
@@ -122,6 +122,15 @@
 
         <MudItem xs="12">
             <MudPaper>
+                <MudStack>
+                    <MudText Typo="Typo.body1">Quick brown fox does quick brown fox things</MudText>
+                    <MudText Typo="Typo.button">Quick brown fox does quick brown fox things</MudText>
+                    <MudText Typo="Typo.subtitle1">Quick brown fox does quick brown fox things</MudText>
+                    <MudText Typo="Typo.subtitle2">Quick brown fox does quick brown fox things</MudText>
+                    <MudText Typo="Typo.h6">Quick brown fox does quick brown fox things</MudText>
+                    <MudText Typo="Typo.overline">Quick brown fox does quick brown fox things</MudText>
+                    <MudText Typo="Typo.caption">Quick brown fox does quick brown fox things</MudText>
+                </MudStack>
             </MudPaper>
         </MudItem>
     </MudGrid>
