--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -14,16 +14,6 @@
 }
 
 @font-face {
-    font-family: "SourceRegular";
-    src: url("../fonts/SourceCodePro-Regular.ttf") format('truetype');
-}
-
-@font-face {
-    font-family: "SourceBlack";
-    src: url("../fonts/SourceCodePro-Black.ttf") format('truetype');
-}
-
-@font-face {
     font-family: "NovaRegular";
     src: url('../fonts/Proxima Nova Regular.otf') format('opentype');
 }
@@ -38,9 +28,8 @@
     src: url('../fonts/Proxima Nova Black.otf') format('opentype');
 }
 
-@font-face {
-    font-family: "NovaExtraBlack";
-    src: url("../fonts/ProximaNovaExCn-Extrabld.otf") format('opentype');
+.smol-accent {
+    padding: 5px 2px !important;
 }
 
 html, body {
