Looks even better now (race page, that is)

--- a/SimTECH/SimTECH/Components/GridChange.razor
+++ b/SimTECH/SimTECH/Components/GridChange.razor
@@ -1,6 +1,6 @@
-﻿<MudStack Row="true">
-    <MudIcon Size="Size.Small" Icon="@_icon" Color="@_iconColour" Style="@_style" />
-    <MudText Typo="Typo.caption" Color="@_iconColour">@_gridDisplay</MudText>
+﻿<MudStack Row="true" Spacing="1" Class="align-center">
+    <MudIcon Size="Size.Medium" Icon="@_icon" Color="@_iconColour" Style="@_style" />
+    <MudText Typo="Typo.subtitle1" Color="@_iconColour">@_gridDisplay</MudText>
 </MudStack>
 
 @code {
@@ -10,11 +10,11 @@
         get
         {
             if (Change > 0)
-                return Icons.Material.Filled.KeyboardDoubleArrowUp;
+                return IconCollection.ArrowUp;
             if (Change < 0)
-                return Icons.Material.Filled.KeyboardDoubleArrowDown;
+                return IconCollection.ArrowDown;
 
-            return Icons.Material.Filled.DragHandle;
+            return IconCollection.Equal;
         }
     }
 
