--- a/SimTECH/SimTECH/Pages/Racing/Race.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Race.razor
@@ -77,7 +77,7 @@
                 <span class="smol-accent" style="@(ViewHelper.SetFullColourstyle(context.Colour, context.Accent))"></span>
             </MudTd>
             <MudTd Class="overflow-hider">
-                <MudStack Row="true">
+                <MudStack Row="true" Spacing="1" Class="align-center">
                     <MudText Typo="Typo.body1">@context.FirstName</MudText>
                     <MudText Typo="Typo.button">@context.LastName</MudText>
                     @if (context.HasFastestLap)
