--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -37,7 +37,7 @@ html, body {
     font-size: 18px;
 }
 
-h1, h2, h3, h4, h5, .number-col, .number-col-lg {
+h1, h2, h3, h4, h5 {
     font-family: F1Regular;
 }
 
